--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     --target-color: #f7da31;
     --page-color: #ffffff;
     --block-color: #e6e6e6;
+    /* --block-color: red; */
     --text-color: #000000;
     --accent-color: #bca623;
 }
@@ -23,7 +24,11 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 10px;
+    gap: 20px;
+}
+
+#target-input-label {
+    margin: 0;
 }
 
 #letter-input,
@@ -32,17 +37,37 @@ body {
     width: 50%;
     font-size: larger;
     text-align: center;
+    border-radius: 10px;
 }
 
-#letter-input {
+#letter-input,
+#letter-input:focus {
     letter-spacing: 0.25em;
+    border: none;
+    outline: none;
+}
+
+#find-words-btn {
+    color: var(--accent-color);
+    border: var(--accent-color) solid 1px;
+}
+
+button {
+    cursor: pointer;
 }
 
 .target-input {
+    background-color: var(--block-color);
+    border: solid black 0px;
+    border-radius: 10px;
     font-size: medium;
     height: 40px;
     width: 40px;
     margin: 3px;
+}
+
+.target-input:hover {
+    background-color: color-mix(in srgb, var(--block-color), transparent 80%);
 }
 
 h1 {
